--- a/main.html
+++ b/main.html
@@ -9,6 +9,58 @@
 </head>
 <body>
     <!-- add table here -->
+	<table id="table" >
+		<thead id="head">
+			<tr>
+				<td>NAME</td>
+				<td>KILLS</td>
+				<td>SAVED</td>
+				<td>DEATHS</td>
+				<td>REVIVES</td>
+				<td>WIN</td>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr class="odd">
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+
+			<tr class="even">
+				<td>Cool Doggo</td>
+				<td>13</td>
+				<td>4</td>
+				<td>8</td>
+				<td>7</td>
+				<td>1</td>
+			</tr>
+
+			<tr class="odd">
+				<td>Andrews</td>
+				<td>19</td>
+				<td>2</td>
+				<td>10</td>
+				<td>11</td>
+				<td>0</td>
+			</tr>
+		</tbody>
+
+		<tfoot class="even">
+			<tr>
+				<td>Strawberry</td>
+				<td>2</td>
+				<td>9</td>
+				<td>3</td>
+				<td>5</td>
+				<td>1</td>
+			</tr>
+		</tfoot>
+	</table>
 
         
 </body>
