--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <!-- add table here -->
-	<table id="table" >
+	<table id="table">
 		<thead id="head">
 			<tr>
-				<td>NAME</td>
-				<td>KILLS</td>
-				<td>SAVED</td>
-				<td>DEATHS</td>
-				<td>REVIVES</td>
-				<td>WIN</td>
+				<th>NAME</th>
+				<th>KILLS</th>
+				<th>SAVED</th>
+				<th>DEATHS</th>
+				<th>REVIVES</th>
+				<th>WIN</th>
 			</tr>
 		</thead>
 
@@ -50,8 +50,8 @@
 			</tr>
 		</tbody>
 
-		<tfoot class="even">
-			<tr>
+		<tfoot id="foot">
+			<tr class="even">
 				<td>Strawberry</td>
 				<td>2</td>
 				<td>9</td>
@@ -61,7 +61,5 @@
 			</tr>
 		</tfoot>
 	</table>
-
-        
 </body>
 </html>
